--- a/src/components/MovieItem/MovieItem.css
+++ b/src/components/MovieItem/MovieItem.css
@@ -80,6 +80,8 @@
 
 .movie__category-list {
   display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
   align-items: center;
   margin-bottom: 10px;
 }
@@ -94,10 +96,6 @@
 
   border: 1px solid #d9d9d9;
   border-radius: 2px;
-}
-
-.movie__category-item + .movie__category-item {
-  margin-left: 10px;
 }
 
 .movie__description {
